--- a/results_simulation.Rmd
+++ b/results_simulation.Rmd
@@ -186,6 +186,22 @@ knitr::include_graphics("simulations/norm/null_design_quantrans_nperm/figs/nxbyf
 
 knitr::include_graphics("simulations/norm/null_design_quantrans_nperm/figs/nxbyfacet_density_wpd_N01.png")
 ```
+
+```{r normal05-norm, fig.cap="Density plots of normalised wpd is shown for Normal(0,5) distribution. The mean and sd of the distribution looks almost similar for different facet and x-axis categories.", fig.pos="h"}
+
+knitr::include_graphics("simulations/norm/null_design_quantrans_nperm/figs/nxbyfacet_density_wpd_N05.png")
+```
+
+```{r normal51-norm, fig.cap="Density plots of normalised wpd is shown for Normal(5,1) distribution. The mean and sd of the distribution looks almost similar for different facet and x-axis categories.", fig.pos="h"}
+
+knitr::include_graphics("simulations/norm/null_design_quantrans_nperm/figs/nxbyfacet_density_wpd_N51.png")
+```
+
+```{r normal55-norm, fig.cap="Density plots of normalised wpd is shown for Normal(5,5) distribution. The mean and sd of the distribution looks almost similar for different facet and x-axis categories.", fig.pos="h"}
+
+knitr::include_graphics("simulations/norm/null_design_quantrans_nperm/figs/nxbyfacet_density_wpd_N55.png")
+```
+
 # How to design the alternate designs when distributions are actually different?
 
 
